# bounce-desktop

./: .dockerignore  .gitignore  CHANGELOG.md  build_design.md  explore_build.sh  makefile  meson.build  pixel_test.sh  pyproject.toml
bounce_desktop/: bounce_desk_test.py  meson.build
docker/: build_entrypoint.sh  build_env.dockerfile  docker-compose.yaml
packaging/: placeholder.py  test_package.sh
src/bindings/: client_ext.cpp  client_ext.h  desktop_ext.cpp
src/bounce_desktop/: integration_test.py  meson.build
src/desktop/: client.cpp  client.h  client_test.cpp  desktop.cpp  desktop.h  desktop_test.cpp  mouse_button.h  sdl_viewer.cpp  sdl_viewer.h  weston_backend.cpp  weston_backend.h
src/process/: process_test.cpp
src/test/: integration_test.py  integration_test_main.cpp  multi_instance_integration_test_main.cpp
